cluster/apps/uss-champlin-web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uss-champlin-web
  labels:
    app.kubernetes.io/name: uss-champlin-web
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: uss-champlin-web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: uss-champlin-web
    spec:
      imagePullSecrets:
        - name: ghcr-docker-pull-secret
      containers:
        - name: uss-champlin-web
          image: ghcr.io/mwgustin/uss-champlin-web:2026-04-21.1
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
