cluster/apps/uss-champlin-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uss-champlin-web
  labels:
    app.kubernetes.io/name: uss-champlin-web
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: uss-champlin-web
